fixed text alignment

--- a/src/components/home-page-main-component/home-page-main-component.css
+++ b/src/components/home-page-main-component/home-page-main-component.css
@@ -17,6 +17,7 @@
     text-align: center;
     gap:1rem;
     align-self: center;
+    align-items: center;
 }
 
 .secoundary-btn{
@@ -36,6 +37,7 @@
 
   .home-page-main-description{
       font-size: 1rem;
+      width: 60%;
   }
 
 @media only screen and (min-width: 800px) {
